--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@ form {
      margin: 40px 0;
 }
 
-form label, form p {
+form label, form legend {
     display: block;
     font-size: 20px;
     margin: 0 0 10px;
@@ -114,4 +114,8 @@ form label, form p {
 
 .checkbox {
     margin: 20px 0;
+}
+
+.enviar {
+    
 }
