--- a/css/style.css
+++ b/css/style.css
@@ -133,3 +133,18 @@ form label, form legend {
     background: darkorange;
     transform: scale(1.1);
 }
+
+table {
+    margin: 20px 0 40px 0;
+}
+
+thead {
+    background: #555555;
+    color: white;
+    font-weight: bold;
+}
+
+td, th {
+    border: 1px solid #000000 ;
+    padding: 8px 15px;
+}
